adding java doc comments

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit-dep</artifactId>
+            <version>4.8.2</version>
+        </dependency>
     </dependencies>
 
 
